syntax = "proto3";

package v2ray.core.app.dns.fakedns;
option csharp_namespace = "V2Ray.Core.App.Dns.Fakedns";
option go_package = "github.com/ghxhy/v2ray-core/v5/app/dns/fakedns";
option java_package = "com.v2ray.core.app.dns.fakedns";
option java_multiple_files = true;

import "common/protoext/extensions.proto";

message FakeDnsPool{
  option (v2ray.core.common.protoext.message_opt).type = "service";
  option (v2ray.core.common.protoext.message_opt).short_name = "fakeDns";

  string ip_pool = 1; //CIDR of IP pool used as fake DNS IP
  int64  lruSize = 2; //Size of Pool for remembering relationship between domain name and IP address
}

message FakeDnsPoolMulti{
  option (v2ray.core.common.protoext.message_opt).type = "service";
  option (v2ray.core.common.protoext.message_opt).short_name = "fakeDnsMulti";

  repeated FakeDnsPool pools = 1;
}